# rainmeter-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  release-plz.toml
.github/workflows/: main.yml
rainmeter-rs/: CHANGELOG.md  Cargo.toml  README.md
rainmeter-rs/src/: lib.rs  patch.patch
rainmeter-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rainmeter-sys/native/: wrapper.h
src/: lib.rs
