[package]
name = "rainmeter"
description = "A safe, high-level Rust wrapper around Rainmeter's C/C++ plugin API."
homepage = "https://github.com/KitsuneDev/rainmeter-rs"
repository = "https://github.com/KitsuneDev/rainmeter-rs"
license = "LGPL-3.0-or-later"
version = "0.1.1"
edition = "2024"
readme = "README.md"
keywords = ["rainmeter", "plugin", "ffi"]
categories = ["development-tools::ffi", "api-bindings", "os::windows-apis"]

[dependencies]
tao = "0.34.0"
once_cell = "1.21.3"
windows = { version = "0.62.2", features = ["Win32"] }
rainmeter-sys = { path = "../rainmeter-sys", version = "0.1.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
