[package]
name = "rainmeter-sys"
version = "0.1.1"
edition = "2024"
description = "Low-Level Rainmeter FFI Bindings"
homepage = "https://github.com/KitsuneDev/rainmeter-rs"
repository = "https://github.com/KitsuneDev/rainmeter-rs"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["rainmeter", "plugin", "ffi"]
categories = [
    "development-tools::ffi",
    "external-ffi-bindings",
    "os::windows-apis",
]
[dependencies]


[build-dependencies]
bindgen = "0.72.1"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
